--- a/css/style.css
+++ b/css/style.css
@@ -134,17 +134,13 @@ p {
 
 .contenedor {
     max-width: var(--anchopantalla);
-    margin: 0 auto;
+    margin: 3rem auto;
     background-color: white;
     padding: 3rem;
     border-radius: 1rem;
     -webkit-box-shadow: 0px 10px 21px -9px rgba(0, 0, 0, 0.74);
     -moz-box-shadow: 0px 10px 21px -9px rgba(0, 0, 0, 0.74);
     box-shadow: 0px 10px 21px -9px rgba(0, 0, 0, 0.74);
-}
-
-.servicios {
-    margin-top: 3rem auto;
 }
 
 .contenedor-servicios {
