--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ form legend {
 }
 
 .byJG>.image {
-    background-image: url('/favicon.ico');
+    /* background-image: url('/favicon.ico'); */
     background-position: center center;
     background-size: cover;
     width: 25px;
